# annotation_tool

./: .gitignore  README.md
benchmark/: kernels.hpp  main.cpp  matmul.cpp  matmul.hpp  xnn_inference.c
cpptest/: a.out  kernels.hpp  matmul.cpp  matmul.hpp  weights2.hpp
labels/: testing_labels.csv  training_labels.csv
neural_network/: export.py  predict.py  test.py  train.py  weights.hpp
neural_network/keras_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
neural_network/keras_model/variables/: variables.data-00000-of-00001  variables.index
neural_network/keras_model_1_kernel/: fingerprint.pb  keras_metadata.pb  saved_model.pb
neural_network/keras_model_1_kernel/variables/: variables.data-00000-of-00001  variables.index
neural_network/keras_model_2_layer/: fingerprint.pb  keras_metadata.pb  saved_model.pb
neural_network/keras_model_2_layer/variables/: variables.data-00000-of-00001  variables.index
neural_network/keras_model_small/: fingerprint.pb  keras_metadata.pb  saved_model.pb
neural_network/keras_model_small/variables/: variables.data-00000-of-00001  variables.index
ros_project/: CMakeLists.txt  package.xml
ros_project/driver/include/: xnn_inference.h  xnn_inference_hw.h
ros_project/driver/src/: bram_uio.cpp
ros_project/src/: arm_controller.cpp  hand_detector.cpp  helloworld.cpp  read_write_node.cpp  visualize.cpp
ros_project/src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
ros_project/src/log/: latest_build
training_labels/: labels.csv
vision/: Makefile  main  main.cpp  main.d
vision/other_cpp/: angle_detect.cpp  create_marker.cpp  detect_markers.cpp
viz/: Makefile  main.cpp  output.csv
